strip to/cc/bcc content to 120 characters in syslog, configurable added ext-mbstring, ext-pdo requirements to composer.json

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,10 @@ defaultTZ = Europe/Zurich
 adminTo = hostmaster@example.com
 adminFrom = hostmaster@example.com
 
+[syslog]
+stringLengthLimit = 120
+stringCutSuffix = "..."
+
 [wrapper]
 sendmailCmd = "/usr/sbin/sendmail -t -i"
 throttleCmd ="sudo -u sendmailwrapper /usr/sbin/sendmail-throttle"
