--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "issues": "https://github.com/onlime/sendmail-wrapper/issues"
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "ext-mbstring": "*",
+        "ext-pdo": "*"
     }
 }
