improved array to object conversion in ConfigLoader by using json_encode/decode trick updated CHANGELOG for 1.0.3 release

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": ">=7.2.0",
         "ext-mbstring": "*",
         "ext-pdo": "*",
-        "ext-imap": "*"
+        "ext-imap": "*",
+        "ext-json": "*"
     }
 }
