updated author information in composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "authors": [
         {
             "name": "Philip Iezzi",
-            "email": "github@onlime.ch",
-            "homepage": "http://www.onlime.ch/",
+            "email": "philip@onlime.ch",
+            "homepage": "https://www.onlime.ch/",
             "role": "developer"
         }
     ],
