Added config option `trottle.ignoreExceptions` to ignore exceptions while throttling, allowing fail safety if e.g. db server goes away

--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,7 @@ countMax = 1000
 rcptMax = 1000
 syslogPrefix = sendmail-throttle-php
 adminSubject = "Sendmail limit exceeded"
+ignoreExceptions = false
 
 [db]
 dsn = "mysql:host=localhost;dbname=sendmailwrapper"
