Moved sendmail command-line options -t -i from Sendmail-wrapper config to recommended php.ini sendmail_path Drop support for PHP < 7.4 Added type declaratinos to function arguments, return values

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ stringLengthLimit = 120
 stringCutSuffix = "..."
 
 [wrapper]
-sendmailCmd = "/usr/sbin/sendmail -t -i"
+sendmailCmd = "/usr/sbin/sendmail"
 throttleCmd ="sudo -u sendmailwrapper /usr/sbin/sendmail-throttle"
 throttleOn = true
 defaultHost = "example.com"
