--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "issues": "https://github.com/onlime/sendmail-wrapper/issues"
     },
     "require": {
-        "php": ">=7.3.0",
+        "php": "^7.4 || ^8.0",
         "ext-mbstring": "*",
         "ext-pdo": "*",
         "ext-imap": "*",
