Added laravel/pint as dev dependency and applied PHP style fixes by Pint

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 /config.private.ini
 /doc/db-schema.mwb.bak
 /vendor/
-/composer.phar
-/composer.lock
+composer.phar
+composer.lock
+.pint.cache.json
