--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "ext-pdo": "*",
         "ext-imap": "*",
         "ext-json": "*"
+    },
+    "require-dev": {
+        "laravel/pint": "^1.7"
     }
 }
